@@ -5,6 +5,7 @@
 3. Fetch filters.
 4. If fail to find any tracks, fall through to Spotty (if have Spotify tracks
    and Spotty is installed).
+5. When getting 5 seed tracks select 5 random tracks from last 10 of queue.
 
 0.0.4
 -----
